feat: add button

--- a/main.html
+++ b/main.html
@@ -29,5 +29,6 @@
     <div>
         <img src="assets/gato.jpg" id="fotos" height="426" width="640"/>
     </div>
+    <button>enviar</button>
 </body>
 </html>
