--- a/index2.html
+++ b/index2.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 </head>
-<body>
-    <marquee>Esto es solo una prueba</marquee>    
+
+<body bgcolor="yellow">
+    <marquee><h1>Esto es solo una prueba</h1></marquee>
 </body>
+
 </html>
