Se agrego el archivo graficos.htm y se modifico main.html para que tenga un enlace a dicha pagina

--- a/main.html
+++ b/main.html
@@ -29,5 +29,6 @@
     <div>
         <img src="assets/gato.jpg" id="fotos" height="426" width="640"/>
     </div>
+    <a href="graficos.html"><h1>Graficos</h1></a>
 </body>
 </html>
